another day trying to make my project
I work on the main page layout in css and now I need to work on the other html pages and I need to make css for each page.

--- a/coding project-Maxim Tomášek/index.html
+++ b/coding project-Maxim Tomášek/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Osobní blog</title>
+    <link rel="stylesheet" href="styling.css">
 </head>
 <body>
     <div class="panel panel--large">
@@ -13,8 +14,28 @@
             <a href="register.html">Vytvořit účet</a>
           </div>
         </nav>
-        <main>
+        <nav class="navbar">
+          <ul>
+              <li><a href="index.html">Domů</a></li>
+              <li><a href="tips.html">tipy a triky</a></li>
+              <li><a href="news.html">Novinky</a></li>
+              <li><a href="contact.html">Kontakt</a></li>
+          </ul> 
+      </nav>
 
+        <main>
+          <div class="left-column">
+            <p>Levý sloupec. Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na tento blog.</p>
+        </div>
+    
+        <div class="main-content">
+            <h1>Vítejte na mém blogu</h1>
+            <p>Toto je hlavní oblast obsahu, kam budu psát své blogové příspěvky a články.  Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na tento blog.</p>
+        </div>
+    
+        <div class="right-column">
+            <p>Pravý sloupec.  Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na tento blog.</p>
+        </div>
         </main>
         <footer>
             <div class="footer-links">
