--- a/coding project-Maxim Tomášek/login.html
+++ b/coding project-Maxim Tomášek/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Přihlášení | Úkoly</title>
+    <title>Přihlášení</title>
 </head>
 <body>
 <div class="panel">
