--- a/coding project-Maxim Tomášek/index.html
+++ b/coding project-Maxim Tomášek/index.html
@@ -1,53 +1,49 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Osobní blog</title>
-    <link rel="stylesheet" href="styling.css">
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Osobní blog</title>
+  <link href="styling.css" rel="stylesheet">
 </head>
 <body>
-    <div class="panel panel--large">
-        <nav>
-          <div class="nav-links">
-            <a href="login.html">Příhlásit se</a>
-            <a href="register.html">Vytvořit účet</a>
-          </div>
-        </nav>
-        <nav class="navbar">
-          <ul>
-              <li><a href="index.html">Domů</a></li>
-              <li><a href="tips.html">tipy a triky</a></li>
-              <li><a href="news.html">Novinky</a></li>
-              <li><a href="contact.html">Kontakt</a></li>
-          </ul> 
-      </nav>
+<div class="panel panel--large">
+  <nav class="navbar">
+    <a href="index.html" class="home">Domů</a>
+    <a href="tips.html">tipy a triky</a>
+    <a href="news.html">Novinky</a>
+    <a href="contact.html">Kontakt</a>
+    <a href="login.html">Příhlásit se</a>
+    <a href="register.html">Vytvořit účet</a>
+  </nav>
 
-        <main>
-          <div class="left-column">
-            <p>Levý sloupec. Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na tento blog.</p>
-        </div>
-    
-        <div class="main-content">
-            <h1>Vítejte na mém blogu</h1>
-            <p>Toto je hlavní oblast obsahu, kam budu psát své blogové příspěvky a články.  Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na tento blog.</p>
-        </div>
-    
-        <div class="right-column">
-            <p>Pravý sloupec.  Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na tento blog.</p>
-        </div>
-        </main>
-        <footer>
-            <div class="footer-links">
-                <a href="#">Ochrana osobních údajů</a>
-                <a href="#">Podmínky použití</a>
-                <a href="#">Cookies</a>
-              </div>
-              <span>
-                &copy; 2023 Blog s.r.o.
-              </span>
-            </footer>
-          </div>
-        </footer>
+  <main>
+    <div class="left-column">
+      <p>Levý sloupec. Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na
+        tento blog. Přemýšlím na kontentem který budu psát na tento blog.</p>
+    </div>
+
+    <div class="main-content">
+      <h1>Vítejte na mém blogu</h1>
+      <p>Toto je hlavní oblast obsahu, kam budu psát své blogové příspěvky a články. Přemýšlím na kontentem který budu
+        psát na tento blog. Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát
+        na tento blog.</p>
+    </div>
+
+    <div class="right-column">
+      <p>Pravý sloupec. Přemýšlím na kontentem který budu psát na tento blog. Přemýšlím na kontentem který budu psát na
+        tento blog. Přemýšlím na kontentem který budu psát na tento blog.</p>
+    </div>
+  </main>
+
+  <footer>
+    <div class="footer-links">
+      <a href="#">Ochrana osobních údajů</a>
+      <a href="#">Podmínky použití</a>
+      <a href="#">Cookies</a>
+    </div>
+    <span>&copy; 2023 Blog s.r.o.</span>
+  </footer>
+</div>
 </body>
 </html>
