Progressing my project
Just added pages to each post on that website and also I added footer element to all of those pages. Now I need to find out how to keep that footer at the bottom of all the pages not just the main one.

--- a/coding project-Maxim Tomášek/password-recovery.html
+++ b/coding project-Maxim Tomášek/password-recovery.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Obnovení hesla</title>
   <link rel="stylesheet" href="style.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
 <div class="panel">
@@ -24,5 +25,43 @@
     <a href="index.html" class="panel-link">Přejít na hlavní stránku aplikace</a>
   </main>
 </div>
+<footer>
+  <div class="footer-container">
+      <div class="sec aboutus">
+          <h2>O mně</h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus quisquam minus quo illo numquam vel incidunt pariatur hic commodi expedita tempora praesentium at iure fugiat ea, quam laborum aperiam veritatis.</p>
+          <ul class="sci">
+              <li><a href="#"><i class="bx bxl-facebook"></i></a></li>
+              <li><a href="#"><i class="bx bxl-instagram"></i></a></li>
+              <li><a href="#"><i class="bx bxl-twitter"></i></a></li>
+              <li><a href="#"><i class="bx bxl-linkedin"></i></a></li>
+          </ul>
+      </div>
+      <div class="sec quicklinks">
+          <h2>Rychlé odkazy</h2>
+          <ul>
+              <li><a href="#">Domů</a></li>
+              <li><a href="#">Informace o mně</a></li>
+              <li><a href="#">Ochrana osobních údajů</a></li>
+              <li><a href="#">Podmínky použití</a></li>
+              <li><a href="#">Cookies</a></li>
+          </ul>
+      </div>
+      <div class="sec contactBx">
+          <h2>Kontaktní informace</h2>
+          <ul class="info">
+              <li>
+                  <span><i class='bx bxs-map'></i></span>
+                  <span>Kpt.Jaroše 2410 <br> Tábor, 39003 <br> CZ</span>
+              </li>
+              <li>
+                  <span><i class='bx bx-envelope' ></i></span>
+                  <p><a href="maximtomasek@gmail.com">maximtomasek@gmail.com</a></p>
+              </li>
+          </ul>
+      </div>
+  </div>
+  <p style="text-align: center">&copy; 2023</p>
+</footer>
 </body>
 </html>
