--- a/coding project-Maxim Tomášek/customization.html
+++ b/coding project-Maxim Tomášek/customization.html
@@ -4,46 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Přihlášení</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-<div class="panel">
-    <header>
-        <a href="index.html">
-            <svg width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0.939339 10.9393C0.353552 11.5251 0.353552 12.4749 0.939339 13.0607L10.4853 22.6066C11.0711 23.1924 12.0208 23.1924 12.6066 22.6066C13.1924 22.0208 13.1924 21.0711 12.6066 20.4853L4.12132 12L12.6066 3.51472C13.1924 2.92893 13.1924 1.97918 12.6066 1.3934C12.0208 0.80761 11.0711 0.80761 10.4853 1.3934L0.939339 10.9393ZM32 10.5L2 10.5L2 13.5L32 13.5L32 10.5Z" fill="black"/>
-            </svg>
-        </a>
-        <h1>Přihlášení</h1>
-    </header>
+  <div class="panel panel--large">
     <main>
-        <div class="message message--error">
-            Zadané údaje nejsou správné. <span class="open-dialog" data-dialog="forgotten-password">Zapomenuté heslo</span>?
-        </div>
-        <div class="message message--success">
-            Akce se povedla!
-        </div>
-        <form action="login.html" method="post">
-            <label for="email" class="input-label">Email</label>
-            <input type="email" name="email" id="email" class="input" required>
-            <label for="password" class="input-label">Heslo</label>
-            <input type="password" name="password" id="password" class="input" required>
-            <input type="submit" value="Přihlásit se" class="button button--right">
+      <section class="heading">
+        <a href="index.html">
+          <svg width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M0.939339 10.9393C0.353552 11.5251 0.353552 12.4749 0.939339 13.0607L10.4853 22.6066C11.0711 23.1924 12.0208 23.1924 12.6066 22.6066C13.1924 22.0208 13.1924 21.0711 12.6066 20.4853L4.12132 12L12.6066 3.51472C13.1924 2.92893 13.1924 1.97918 12.6066 1.3934C12.0208 0.80761 11.0711 0.80761 10.4853 1.3934L0.939339 10.9393ZM32 10.5L2 10.5L2 13.5L32 13.5L32 10.5Z" fill="black"/>
+          </svg>
+        </a>
+        <h1>Nejlepší stránky na úpravu obrázků</h1>
+        <a href="#">Odhlásit se</a>
+      </section>
+      <section>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore excepturi autem, praesentium beatae eaque illum dolore, at similique ad quod velit in possimus aperiam? Pariatur quod nemo modi perspiciatis nisi!
+        </p>
+        <form action="customization.html" method="post">
+          <textarea id="customization" name="name" rows="8" required>Komentář který se vztahuje na dané téma.</textarea>
+          <input type="submit" name="edit" value="Uložit změny" class="button" />
+          <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
+          <input type="submit" name="delete" value="Odstranit" class="button button--danger" />
         </form>
-
-        <a href="register.html.html" class="panel-link">Vytvořit účet</a>
+      </section>
     </main>
-    <dialog id="forgotten-password" class="dialog">
-        <form action="forgotten-password.html" method="post">
-            <label for="reg-email" class="input-label">Registrační email</label>
-            <input type="email" name="email" id="reg-email" class="input" required>
-            <input type="submit" value="Onnovit zapomenuté heslo" class="button button--full">
-        </form>
-    </dialog>
-</div>
-<footer>
+  </div>
+  <footer>
     <div class="footer-container">
         <div class="sec aboutus">
             <h2>O mně</h2>
