Feat: move footer to bottom on smaller pages

--- a/coding project-Maxim Tomášek/index.html
+++ b/coding project-Maxim Tomášek/index.html
@@ -17,7 +17,7 @@
         <a href="register.html" class="registration">Vytvořit účet</a>
     </div>
 </nav>
-<main>
+<main class="main-content">
     <header class="home" id="home">
         <div class="home-text container">
             <h1 class="home-title">Blogger</h1>
