--- a/coding project-Maxim Tomášek/login.html
+++ b/coding project-Maxim Tomášek/login.html
@@ -9,7 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-<div class="panel">
+<div class="panel main-content">
     <header>
         <a href="index.html">
             <svg width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
