--- a/coding project-Maxim Tomášek/money.html
+++ b/coding project-Maxim Tomášek/money.html
@@ -9,7 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-  <div class="panel panel--large">
+  <div class="panel panel--large main-content">
     <main>
       <section class="heading">
         <a href="index.html">
@@ -71,5 +71,8 @@
     </div>
     <p style="text-align: center">&copy; 2023</p>
 </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="main.js"></script>
 </body>
 </html>
