--- a/coding project-Maxim Tomášek/index.html
+++ b/coding project-Maxim Tomášek/index.html
@@ -13,7 +13,7 @@
 <nav>
     <div class="nav container">
         <a href="#" class="logo">náhodný <span>blog</span></a>
-        <a href="login.html" class="login">Příhlásit se</a>
+        <a href="login.html" class="button">Příhlásit se</a>
         <a href="register.html" class="registration">Vytvořit účet</a>
     </div>
 </nav>
