--- a/coding project-Maxim Tomášek/register.html
+++ b/coding project-Maxim Tomášek/register.html
@@ -28,9 +28,9 @@
       <input type="password" name="confirm-password" id="confirm-password" class="input" required>
       <label for="terms" class="checkbox-label">
         <input type="checkbox" name="terms" id="terms" class="checkbox" required>
-        Souhlasím s <a href="#">podmínkami použití</a> aplikace
+        <span>Souhlasím s <a href="#" class="link-black">podmínkami použití</a> aplikace</span>
       </label>
-      <input type="submit" value="Vytvořit účet" class="button button--right">
+      <input type="submit" value="Vytvořit účet" class="button button--mt">
     </form>
 
     <a href="login.html" class="panel-link">Přihlášení</a>
