images and some tweeking
Added all of the images that I want to use for this website and I changed and I added couple of things in CSS when it comes down to text area and also I fixed issue that one of my links to login wasn´t working and I stylized Login menu.

--- a/coding project-Maxim Tomášek/beginnings.html
+++ b/coding project-Maxim Tomášek/beginnings.html
@@ -25,7 +25,7 @@
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum natus pariatur exercitationem magni numquam, voluptatibus accusantium eum assumenda dolorem voluptatum saepe quas quam cupiditate odio magnam quo sint quae. Quaerat.
         </p>
         <form action="beginnings.html" method="post">
-          <textarea id="beginnings" name="name" rows="8" required>Komentář který se vztahuje na dané téma.</textarea>
+          <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="beginnings" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
           <input type="submit" name="delete" value="Odstranit" class="button button--danger" />
