--- a/coding project-Maxim Tomášek/advice.html
+++ b/coding project-Maxim Tomášek/advice.html
@@ -25,7 +25,7 @@
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ex fuga velit culpa esse, aliquid quod commodi minus quisquam eum recusandae earum tempore! Mollitia, minima aspernatur nesciunt perspiciatis dolores sit!
         </p>
         <form action="advice.html" method="post">
-          <textarea id="advice" name="name" rows="8" required>Komentář který se vztahuje na dané téma.</textarea>
+          <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="advice" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
           <input type="submit" name="delete" value="Odstranit" class="button button--danger" />
