--- a/coding project-Maxim Tomášek/afinity.html
+++ b/coding project-Maxim Tomášek/afinity.html
@@ -25,7 +25,7 @@
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit odio ipsum reiciendis deleniti. Repellendus id aperiam laborum est similique, quidem, quam expedita voluptas enim, numquam impedit nam quaerat! Natus, alias!
         </p>
         <form action="afinity.html" method="post">
-          <textarea id="afinity" name="name" rows="8" required>Komentář který se vztahuje na dané téma.</textarea>
+          <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="afinity" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
           <input type="submit" name="delete" value="Odstranit" class="button button--danger" />
