--- a/coding project-Maxim Tomášek/candle.html
+++ b/coding project-Maxim Tomášek/candle.html
@@ -25,7 +25,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde placeat possimus maiores eum, iure saepe, vel aspernatur numquam at, veritatis quibusdam aliquid ut corporis dolore fugiat reiciendis atque? Natus, corporis.
         </p>
         <form action="candle.html" method="post">
-          <textarea id="candle" name="name" rows="8" required>Komentář který se vztahuje na dané téma.</textarea>
+          <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="candle" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
           <input type="submit" name="delete" value="Odstranit" class="button button--danger" />
