--- a/coding project-Maxim Tomášek/customization.html
+++ b/coding project-Maxim Tomášek/customization.html
@@ -25,7 +25,7 @@
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore excepturi autem, praesentium beatae eaque illum dolore, at similique ad quod velit in possimus aperiam? Pariatur quod nemo modi perspiciatis nisi!
         </p>
         <form action="customization.html" method="post">
-          <textarea id="customization" name="name" rows="8" required>Komentář který se vztahuje na dané téma.</textarea>
+          <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="customization" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
           <input type="submit" name="delete" value="Odstranit" class="button button--danger" />
