--- a/coding project-Maxim Tomášek/diet.html
+++ b/coding project-Maxim Tomášek/diet.html
@@ -25,7 +25,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. At nisi repellat praesentium obcaecati cupiditate totam, nemo voluptatum et ut quam maiores recusandae, enim omnis iusto a exercitationem dolorem error eaque!
         </p>
         <form action="diet.html" method="post">
-          <textarea id="diet" name="name" rows="8" required>Komentář který se vztahuje na dané téma.</textarea>
+          <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="diet" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
           <input type="submit" name="delete" value="Odstranit" class="button button--danger" />
