--- a/coding project-Maxim Tomášek/fig.html
+++ b/coding project-Maxim Tomášek/fig.html
@@ -25,7 +25,7 @@
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis rem praesentium officiis numquam. Nam perspiciatis animi, deserunt neque voluptatum dolor eos nihil tempore vel voluptate perferendis omnis, praesentium, tenetur minima.
         </p>
         <form action="fig.html" method="post">
-          <textarea id="fig" name="name" rows="8" required>Komentář který se vztahuje na dané téma.</textarea>
+          <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="fig" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
           <input type="submit" name="delete" value="Odstranit" class="button button--danger" />
