--- a/coding project-Maxim Tomášek/login.html
+++ b/coding project-Maxim Tomášek/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="panel main-content">
-    <header>
+    <header class="panel-header">
         <a href="index.html">
             <svg width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0.939339 10.9393C0.353552 11.5251 0.353552 12.4749 0.939339 13.0607L10.4853 22.6066C11.0711 23.1924 12.0208 23.1924 12.6066 22.6066C13.1924 22.0208 13.1924 21.0711 12.6066 20.4853L4.12132 12L12.6066 3.51472C13.1924 2.92893 13.1924 1.97918 12.6066 1.3934C12.0208 0.80761 11.0711 0.80761 10.4853 1.3934L0.939339 10.9393ZM32 10.5L2 10.5L2 13.5L32 13.5L32 10.5Z" fill="black"/>
@@ -25,7 +25,7 @@
         <div class="message message--success">
             Akce se povedla!
         </div>
-        <form action="login.html" method="post">
+        <form action="login.html" method="post" class="panel-form">
             <label for="email" class="input-label">Email</label>
             <input type="email" name="email" id="email" class="input" required>
             <label for="password" class="input-label">Heslo</label>
@@ -33,7 +33,7 @@
             <input type="submit" value="Přihlásit se" class="button button--right">
         </form>
 
-        <a href="register.html.html" class="panel-link">Vytvořit účet</a>
+        <a href="register.html" class="panel-link">Vytvořit účet</a>
     </main>
     <dialog id="forgotten-password" class="dialog">
         <form action="forgotten-password.html" method="post">
