--- a/coding project-Maxim Tomášek/money.html
+++ b/coding project-Maxim Tomášek/money.html
@@ -25,7 +25,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam asperiores facilis atque magni sapiente? A ut provident debitis nulla, harum deleniti molestias aliquam itaque assumenda eaque voluptatum hic repudiandae officiis.
         </p>
         <form action="money.html" method="post">
-          <textarea id="money" name="name" rows="8" required>Komentář který se vztahuje na dané téma.</textarea>
+          <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="money" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
           <input type="submit" name="delete" value="Odstranit" class="button button--danger" />
