--- a/coding project-Maxim Tomášek/news.html
+++ b/coding project-Maxim Tomášek/news.html
@@ -25,7 +25,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, mollitia nesciunt similique maxime fuga excepturi ea voluptates, at ratione maiores iste dolorem rem commodi necessitatibus suscipit. Modi facilis recusandae architecto!
         </p>
         <form action="news.html" method="post">
-          <textarea id="news" name="name" rows="8" required>Komentář který se vztahuje na dané téma.</textarea>
+          <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="news" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
           <input type="submit" name="delete" value="Odstranit" class="button button--danger" />
