--- a/coding project-Maxim Tomášek/register.html
+++ b/coding project-Maxim Tomášek/register.html
@@ -28,10 +28,10 @@
       <input type="password" name="confirm-password" id="confirm-password" class="input" required>
       <label for="terms" class="checkbox-label">
         <input type="checkbox" name="terms" id="terms" class="checkbox" required>
-        <span>Souhlasím s <a href="#" class="link-black">podmínkami použití</a> aplikace</span>
+        <span>Souhlasím s <a href="#" class="link-blue">podmínkami použití</a> aplikace</span>
       </label>
       <input type="submit" value="Vytvořit účet" class="button button--mt">
-    </form>
+    </form> 
 
     <a href="login.html" class="panel-link">Přihlášení</a>
   </main>
