--- a/coding project-Maxim Tomášek/password-recovery.html
+++ b/coding project-Maxim Tomášek/password-recovery.html
@@ -14,7 +14,7 @@
     <h1>Obnovení hesla</h1>
   </header>
   <main>
-    <form action="forgotten-password.html" method="post">
+    <form action="forgotten-password.html" method="post" class="panel-form">
       <label for="password" class="input-label">Heslo</label>
       <input type="password" name="password" id="password" class="input" required>
       <label for="confirm-password" class="input-label">Heslo znovu</label>
