--- a/coding project-Maxim Tomášek/register.html
+++ b/coding project-Maxim Tomášek/register.html
@@ -19,13 +19,13 @@
     <h1>Vytvořit účet</h1>
   </header>
   <main>
-    <form action="register.html" method="post" class="panel-form">
+    <form name="register" form action="register.html" method="post" class="panel-form" onsubmit="return validateForm('register')" novalidate>
       <label for="email" class="input-label">Email</label>
       <input type="email" name="email" id="email" class="input" required>
       <label for="password" class="input-label">Heslo</label>
       <input type="password" name="password" id="password" class="input" required>
       <label for="confirm-password" class="input-label">Heslo znovu</label>
-      <input type="password" name="confirm-password" id="confirm-password" class="input" required>
+      <input type="password" name="confirm-password" id="confirm-password" class="input" data-compare="password" data-message="Heslo a Heslo znovu se neshodují." required>
       <label for="terms" class="checkbox-label">
         <input type="checkbox" name="terms" id="terms" class="checkbox" required>
         <span>Souhlasím s <a href="#" class="link-blue">podmínkami použití</a> aplikace</span>
