updating text on my website
Just replacing the generig text to my text.

--- a/coding project-Maxim Tomášek/index.html
+++ b/coding project-Maxim Tomášek/index.html
@@ -161,7 +161,7 @@
         <div class="footer-container">
             <div class="sec aboutus">
                 <h2>O mně</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus quisquam minus quo illo numquam vel incidunt pariatur hic commodi expedita tempora praesentium at iure fugiat ea, quam laborum aperiam veritatis.</p>
+                <p>Jsem vyučený kuchař a také mám maturitu v oboru podnikání. Je mi 23 let a na to že jsem docela mladý tak jsem si už vyzkoušel několik zaměstnání. Pracoval jsem jako prodejce v elektru, účetní a poradce životního pojištění. Od 15 let jsem chodil do posilovny do 18 let a poté ze zdravotních důvodů jsem musel přestat.</p>
                 <ul class="sci">
                     <li><a href="#"><i class="bx bxl-facebook"></i></a></li>
                     <li><a href="#"><i class="bx bxl-instagram"></i></a></li>
