--- a/coding project-Maxim Tomášek/index.html
+++ b/coding project-Maxim Tomášek/index.html
@@ -28,10 +28,9 @@
         <div class="contentBx">
             <h2 class="titleText">Aktuální témata</h2>
             <p class="title-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum eos consequuntur voluptate dolorum totam provident ducimus cupiditate dolore doloribus repellat. Saepe ad fugit similique quis quam. Odio suscipit incidunt distinctio.
-                <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed blanditiis libero pariatur ipsum suscipit voluptates aut, repellendus quos dolor autem, natus laboriosam consectetur maxime cumque, sunt magni optio? Veritatis, ea?
+                Aktuální témata, které zde najdete, se budou týkat různých odvětví. Na této webové stránce najdete aktuality z odvětví sportu, gastronomie ale také zajímavé zprávy ohledně nových poznatků.
+                <br>Budu velice rád, pokud napíšete pod téma váš pohled na dané téma a také pokud budete mít nápad, jak by se nějaká věc dala udělat jinak.
             </p>
-            <a href="#" class="btn2">Přečtěte si více</a>
         </div>
         <div class="imgBx">
             <img src="images/about.png" alt="muž v šatně posilovny" class="fitBg">
