--- a/App/html-templates/advice.html
+++ b/App/html-templates/advice.html
@@ -26,6 +26,7 @@
           <br>To co můžete v této situaci máte na výběr, jesli bude chtít pracovat za minimální příjem v restauraci do té doby, než získáte dostatek dovedností, aby jste se mohli stát samostatným kuchařem a nebo šéfkuchařem a nebo můžete zkoušet hledat práci v jiném odvětví.
         </p>
         <form action="advice.html" method="post">
+          <input type="hidden" name="_method" value="PATCH">
           <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="advice" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
