--- a/App/html-templates/afinity.html
+++ b/App/html-templates/afinity.html
@@ -35,6 +35,7 @@
           <br>10. V neposlední řadě vám tento software umožňuje zobrazit historii změn jako seznam a procházet mezi změnami pomocí posuvníku.
         </p>
         <form action="afinity.html" method="post">
+          <input type="hidden" name="_method" value="PATCH">
           <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="afinity" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
