--- a/App/html-templates/candle.html
+++ b/App/html-templates/candle.html
@@ -30,6 +30,7 @@
           <br>5. Omáčku zjemníme smetanou, dochutíme citronem a plátkem másla, již nevaříme. Podáváme s houskovým knedlíkem, na talíři dozdobíme koouskem citronu a brusinkami.
         </p>
         <form action="candle.html" method="post">
+          <input type="hidden" name="_method" value="PATCH">
           <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="candle" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
