--- a/App/html-templates/customization.html
+++ b/App/html-templates/customization.html
@@ -26,6 +26,7 @@
           <br>Mezi nejzajímavější periferie rozhodně patří herní klávesnice Wooting Two HE. Tato herní klávesnice na prnví pohled nevypadá, že by se odlišovala od spousty ostatních herních klávesnic, který jsou na trhu, ale skutečnost je taková, že tato klávesnice místo klasických mechanických spínačů má analogové spínače. Namísto spoléhání se pouze na mechanické kontakty používají analogové spínače infračervené LED a pokročilé senzory k měření intenzity podél stisku klávesy a přesně určují, jak daleko je klávesa stisknuta. Tato technologie umožňuje klávesnici napodobovat plynulou činnost joysticku na ovladači nebo spínače na ovladači od konzole.
         </p>
         <form action="customization.html" method="post">
+          <input type="hidden" name="_method" value="PATCH">
           <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="customization" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
