--- a/App/html-templates/fig.html
+++ b/App/html-templates/fig.html
@@ -25,6 +25,7 @@
           Figma je pro lidi, kteří chtějí testovat návrhy pro webové stránky mobilní aplikace a další digitální produkty. Je to oblíbený nástroj pro designery produktové manažery autory a vývojáře a pomáhá komukoli, kdo se podílí na procesu navrhování poskytovat zpětnou vazbu a činit lepší rozhodnutí.
         </p>
         <form action="fig.html" method="post">
+          <input type="hidden" name="_method" value="PATCH">
           <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="fig" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
