--- a/App/html-templates/news.html
+++ b/App/html-templates/news.html
@@ -26,6 +26,7 @@
           <br>Jedna z věcí, kterou jsem se dozvěděl až po dvou letech silového cvičení je to, že je daleko lepší cvičit častěji, ale snížit intenzitu tréninku, pokud váš cíl je vytvarovat tělo, ale naopak, pokud chcete být schopný zvedat těžší břemena, tak je lepší mít více intenzivnější tréninku, ale dávat si větší rozestup mezi dny, kdy budete mít trénink.
         </p>
         <form action="news.html" method="post">
+          <input type="hidden" name="_method" value="PATCH">
           <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="news" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
