--- a/App/html-templates/beginnings.html
+++ b/App/html-templates/beginnings.html
@@ -31,6 +31,7 @@
           <br>6. Odkazy HTML jsou označeny pomočí elementu (a). Místo kulatých závorek dejte <>.
         </p>
         <form action="beginnings.html" method="post">
+          <input type="hidden" name="_method" value="PATCH">
           <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="beginnings" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
