--- a/App/html-templates/diet.html
+++ b/App/html-templates/diet.html
@@ -26,6 +26,7 @@
           <br>Nedávno vyšlo na povrch nová studie, která říká, že keto dieta může být spojena s vyšším rizikem srdečních onemocnění zvýšením hladiny LDL ( " špatného " ) cholesterolu a zdvojnásobením rizika kardiovaskulárních příhod, jako jsou infarkty a mrtvice.
         </p>
         <form action="diet.html" method="post">
+          <input type="hidden" name="_method" value="PATCH">
           <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="diet" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
           <input type="submit" name="done" value="Hotovo" class="button button--secondary" />
