Front End href correction

--- a/App/html-templates/password-recovery.html
+++ b/App/html-templates/password-recovery.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Obnovení hesla</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../public/Resources/style/style.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -14,7 +14,7 @@
     <h1>Obnovení hesla</h1>
   </header>
   <main>
-    <form action="forgotten-password.html" method="post" class="panel-form">
+    <form action="../../App/html-templates/forgotten-password.html" method="post" class="panel-form">
       <label for="password" class="input-label">Heslo</label>
       <input type="password" name="password" id="password" class="input" required>
       <label for="confirm-password" class="input-label">Heslo znovu</label>
@@ -22,7 +22,7 @@
       <input type="submit" value="Nastavit nové heslo" class="button button--right">
     </form>
 
-    <a href="index.html" class="panel-link">Přejít na hlavní stránku aplikace</a>
+    <a href="../../App/html-templates/index.html" class="panel-link">Přejít na hlavní stránku aplikace</a>
   </main>
 </div>
 <footer>
@@ -65,6 +65,6 @@
 </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="main.js"></script>
+  <script src="../../public/Resources/script/main.js"></script>
 </body>
 </html>
