--- a/App/html-templates/diet.html
+++ b/App/html-templates/diet.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keto dieta</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../public/Resources/style/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
   <div class="panel panel--large main-content">
     <main>
       <section>
-        <a href="index.html">
+        <a href="../../App/html-templates/index.html">
           <svg width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M0.939339 10.9393C0.353552 11.5251 0.353552 12.4749 0.939339 13.0607L10.4853 22.6066C11.0711 23.1924 12.0208 23.1924 12.6066 22.6066C13.1924 22.0208 13.1924 21.0711 12.6066 20.4853L4.12132 12L12.6066 3.51472C13.1924 2.92893 13.1924 1.97918 12.6066 1.3934C12.0208 0.80761 11.0711 0.80761 10.4853 1.3934L0.939339 10.9393ZM32 10.5L2 10.5L2 13.5L32 13.5L32 10.5Z" fill="black"/>
           </svg>
@@ -25,7 +25,7 @@
           Ketogenní dieta obvykle snižuje celkový příjem sacharidů na méně než 50 gramů denně. Pro představu 50 gramů sacharidů je méně než je obsaženo v bagetě. Lidi kteří se řídí podle ketogenní diety jí malé množství sacharidů jako je například 20 gramů sacharidů denně. Obecně platí, že průměrný denní příjem tuků činí 70-80 % z celkového kalorického příjmu, 5-10 % sacharidů a 10-20 % bílkovin.
           <br>Nedávno vyšlo na povrch nová studie, která říká, že keto dieta může být spojena s vyšším rizikem srdečních onemocnění zvýšením hladiny LDL ( " špatného " ) cholesterolu a zdvojnásobením rizika kardiovaskulárních příhod, jako jsou infarkty a mrtvice.
         </p>
-        <form action="diet.html" method="post">
+        <form action="../../App/html-templates/diet.html" method="post">
           <input type="hidden" name="_method" value="PATCH">
           <textarea class="textarea-style" placeholder="Komentář který se vztahuje na dané téma." id="diet" name="name" required></textarea>
           <input type="submit" name="edit" value="Uložit změny" class="button" />
@@ -75,6 +75,6 @@
 </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="main.js"></script>
+  <script src="../../public/Resources/script/main.js"></script>
 </body>
 </html>
