--- a/App/html-templates/register.html
+++ b/App/html-templates/register.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registrace</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../public/Resources/style/style.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
 <div class="panel main-content ">
   <header class="panel-header">
-    <a href="index.html">
+    <a href="../../App/html-templates/index.html">
       <svg width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M0.939339 10.9393C0.353552 11.5251 0.353552 12.4749 0.939339 13.0607L10.4853 22.6066C11.0711 23.1924 12.0208 23.1924 12.6066 22.6066C13.1924 22.0208 13.1924 21.0711 12.6066 20.4853L4.12132 12L12.6066 3.51472C13.1924 2.92893 13.1924 1.97918 12.6066 1.3934C12.0208 0.80761 11.0711 0.80761 10.4853 1.3934L0.939339 10.9393ZM32 10.5L2 10.5L2 13.5L32 13.5L32 10.5Z" fill="black"/>
       </svg>
@@ -19,7 +19,7 @@
     <h1>Vytvořit účet</h1>
   </header>
   <main>
-    <form name="register" form action="register.html" method="post" class="panel-form" onsubmit="return validateForm('register')" novalidate>
+    <form name="register" form action="../../App/html-templates/register.html" method="post" class="panel-form" onsubmit="return validateForm('register')" novalidate>
       <label for="email" class="input-label">Email</label>
       <input type="email" name="email" id="email" class="input" required>
       <label for="password" class="input-label">Heslo</label>
@@ -33,7 +33,7 @@
       <input type="submit" value="Vytvořit účet" class="button button--mt">
     </form> 
 
-    <a href="login.html" class="panel-link">Přihlášení</a>
+    <a href="../../App/html-templates/login.html" class="panel-link">Přihlášení</a>
   </main>
 </div>
 <footer>
@@ -76,6 +76,6 @@
 </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="main.js"></script>
+  <script src="../../public/Resources/script/main.js"></script>
 </body>
 </html>
